# twingate-linux-tray

./: .gitignore  LICENSE  README.md  mise.toml  package-lock.json  package.json
.github/workflows/: pr-checks.yml  publish.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  error.rs  lib.rs  main.rs  managers.rs  models.rs  network.rs  state.rs  tray.rs  utils.rs
src/services/: schemas.ts  twingate-cli.ts  twingate-tray.ts
