[package]
name = "twingate-tray"
version = "0.1.4"
description = "Twingate Linux Tray App"
authors = ["me@demi.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "twingate_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [ "tray-icon", "image-png" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
arboard = "3.4.1"
chrono = "0.4.40"
tokio = { version = "1", features = ["time"] }
regex = "1.5.4"
tauri-plugin-single-instance = "2"
thiserror = "1.0"
log = "0.4"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
